update ssh script

--- a/playbooks/disableSSHPasswordAuth.yaml
+++ b/playbooks/disableSSHPasswordAuth.yaml
@@ -6,4 +6,4 @@
     shell: |
       cd /etc/ssh
       sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/g' /etc/ssh/sshd_config
-      service sshd restart
+      systemctl restart ssh
