--- a/.github/workflows/online-hosts.yaml
+++ b/.github/workflows/online-hosts.yaml
@@ -14,15 +14,14 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Script
-      run: |
 
+    - name: Run scan script
+      run: |
+        # Add the script content here
         subnet="10.0.30."
         for i in {1..254}; do
           ip="${subnet}${i}"
-
           ping -c 1 -W 1 $ip > /dev/null 2>&1
-
           if [ $? -eq 0 ]; then
             echo $ip is online
             echo $ip >> online.txt
