--- a/.github/workflows/online-hosts.yaml
+++ b/.github/workflows/online-hosts.yaml
@@ -18,6 +18,7 @@ jobs:
     - name: Run scan script
       run: |
         nmap -sn 10.0.30.0/24 -oG - | awk '/Up$/{print $2}' > online.txt
+        sed -i '/^10\.0\.30\.152$/d' online.txt
 
 
     - name: Commit changes
