--- a/playbooks/updates.yaml
+++ b/playbooks/updates.yaml
@@ -4,3 +4,14 @@
       apt:
         update_cache: yes
         upgrade: 'yes'
+
+- hosts: all
+  become: true
+  vars:
+    remote_user: hakrishi
+
+  tasks: 
+    - name: aptVM
+      apt:
+        update_cache: yes
+        upgrade: 'yes'
