--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -21,6 +21,8 @@ jobs:
         sed -i '1s/^/[containers]\n/' containers.txt
 
         sed -i '/^10\.0\.30\.1$/d' containers.txt
+        sed -i '/^10\.0\.30\.2$/d' containers.txt
+        sed -i '/^10\.0\.30\.3$/d' containers.txt
         sed -i '/^10\.0\.30\.197$/d' containers.txt
         sed -i '/^10\.0\.30\.185$/d' containers.txt
         sed -i '/^10\.0\.30\.152$/d' containers.txt
