--- a/playbooks/docker/watchtower.yaml
+++ b/playbooks/docker/watchtower.yaml
@@ -1,7 +1,14 @@
-- name: Watchtower install
+- name: Create watchtower container
   hosts: "*"
-
-  tasks:
-  - name: Watchtower
-    shell: |
-      docker run -d --name watchtower --restart always -v /var/run/docker.sock:/var/run/docker.sock containrrr/watchtower
+  community.docker.docker_container:
+    name: watchtower
+    image: containrrr/watchtower
+    pull: true
+    state: started
+    restart_policy: unless-stopped
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    env:
+      WATCHTOWER_CLEANUP: "true"
+    networks:
+      - name: homelab
