--- a/playbooks/securityHardening/passwordAuthChecker.yaml
+++ b/playbooks/securityHardening/passwordAuthChecker.yaml
@@ -1,8 +1,11 @@
-#!/bin/bash
+- name: Disables password authentication for SSH
+  hosts: "*"
 
-# Check if password authentication is disabled
-if grep -q "PasswordAuthentication no" /etc/ssh/sshd_config; then
-    echo "true"
-else
-    echo "false"
-fi
+  tasks:
+  - name: SSH Password Authentication
+    shell: |
+            if grep -q "PasswordAuthentication no" /etc/ssh/sshd_config; then
+              echo "true"
+            else
+             echo "false"
+            fi
