--- a/playbooks/securityHardening/updates.yaml
+++ b/playbooks/securityHardening/updates.yaml
@@ -1,7 +1,6 @@
 - hosts: "*"
   tasks:
-    - name: apt
-      become: true
-      apt:
-        update_cache: yes
-        upgrade: 'yes'
+    - name: Updates
+      shell: |
+        sudo apt update 
+        sudo apt upgrade -y
